# package_template

./: LICENSE  README.md
my_package/: package.xml  setup.py
my_package/launch/: launch_my_package.py
my_package/my_package/: my_node.py
my_package/my_package/submodules/: my_submodule.py
my_package_interfaces/: CMakeLists.txt  package.xml
